fix the size of the screen and disable overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,12 +2,23 @@
 @use "./styles/partials/breakpoints" as *;
 @use "./styles/partials/colors" as *;
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    overflow-x: hidden; 
+}
 
 .App {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
+    width: 100%;
 }
 
 .content {
@@ -18,6 +29,7 @@
     background-position: center;
     background-repeat: no-repeat;
     padding: 0;
+    width: 100%; 
 
     
     @include tablet {
