--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,6 +10,7 @@
     bottom: 0;
     left: 0;
     z-index: 1000; 
+    overflow: hidden;
 }
 
 .footer p {
