--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
 .header {
     position: relative;
     width: 100%;
+    overflow: hidden; 
 }
 
 .header-content {
@@ -11,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding: 0 1em;
 }
 
 .logo {
